--- a/About.html
+++ b/About.html
@@ -53,6 +53,7 @@
                     <div>นายนนท์รวิศ ยอดทอง</div>
                     <div>6652100142</div>
                     <div>หัวหน้าทีม</div>
+                    <div>ทำหน้าเว็บ</div>
                     <div><a class="nav-link" href="https://github.com/hamsmart1">Github</a></div>
                 </div>
             </div>
@@ -61,7 +62,7 @@
                 <div class="team-name">
                     <div>นายนวดล ศรีสำเริง</div>
                     <div>6652100886</div>
-                    <div>หัวหน้าทีม</div>
+                    <div>ออกแบบ</div>
                     <div><a class="nav-link" href="https://github.com/StAim01">Github</a></div>
                 </div>
             </div>
@@ -71,7 +72,7 @@
                 <div class="team-name">
                     <div>นายณฐกร บุญกอง</div>
                     <div>6652100436</div>
-                    <div>หัวหน้าทีม</div>
+                    <div>ทำหน้าเว็บ</div>
                     <div><a class="nav-link" href="https://github.com/Korn147852">Github</a></div>
                 </div>
             </div>
@@ -80,17 +81,17 @@
                 <div class="team-name">
                     <div>นาย ปฐมพร เรืองสวัสดิ์</div>
                     <div>6652101122</div>
-                    <div>หัวหน้าทีม</div>
+                    <div>ออกแบบ</div>
                     <div><a class="nav-link" href="https://github.com/Pathomporn6652101122">Github</a></div>
                 </div>
             </div>
             <!-- Row 3 -->
             <div class="col-6 col-md-4 team-member">
-                <img src="https://via.placeholder.com/150" alt="Employee 5" class="team-photo">
+                <img src="C:\Users\hamsm\Desktop\G1 FULLSTACK\agfadfa\About.html" alt="Employee 5" class="team-photo">
                 <div class="team-name">
                     <div>นายณัฐกฤษณ์ อ่วมเกษม</div>
                     <div>6652100070</div>
-                    <div>หัวหน้าทีม</div>
+                    <div>ทำหน้าเว็บ</div>
                     <div><a class="nav-link" href="https://github.com/Diamond-cyber888">Github</a></div>
                 </div>
             </div>
