--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@
                     <div>6652100142</div>
                     <div>หัวหน้าทีม</div>
                     <div>ทำหน้าเว็บ</div>
-                    <div><a class="nav-link" href="https://github.com/hamsmart1">Github</a></div>
+                    <div><a class="nav-link" href="https://hamsmart1.github.io/MyPage/">Github</a></div>
                 </div>
             </div>
             <div class="col-6 col-md-4 team-member">
