--- a/About.html
+++ b/About.html
@@ -73,7 +73,7 @@
                     <div>นายณฐกร บุญกอง</div>
                     <div>6652100436</div>
                     <div>ทำหน้าเว็บ</div>
-                    <div><a class="nav-link" href="https://github.com/Korn147852">Github</a></div>
+                    <div><a class="nav-link" href="https://korn147852.github.io/Resume-2/?fbclid=IwZXh0bgNhZW0CMTAAAR3YLEOCOuJqBb-kxIqRSQnh8EHW-5RFN_Dc3bvYwwQcsrLc5NOtEJDO7Nw_aem_wtrcWPu30Aq3KtPJ9qHbAA">Github</a></div>
                 </div>
             </div>
             <div class="col-6 col-md-4 team-member">
