--- a/About.html
+++ b/About.html
@@ -87,12 +87,12 @@
             </div>
             <!-- Row 3 -->
             <div class="col-6 col-md-4 team-member">
-                <img src="C:\Users\hamsm\Desktop\G1 FULLSTACK\agfadfa\About.html" alt="Employee 5" class="team-photo">
+                <img src="https://github.com/hamsmart1/ColoringBookGroupProjeck/blob/main/profile.jpg" alt="Employee 5" class="team-photo">
                 <div class="team-name">
                     <div>นายณัฐกฤษณ์ อ่วมเกษม</div>
                     <div>6652100070</div>
                     <div>ทำหน้าเว็บ</div>
-                    <div><a class="nav-link" href="https://github.com/Diamond-cyber888">Github</a></div>
+                    <div><a class="nav-link" href="https://diamond-cyber888.github.io/Project/">Github</a></div>
                 </div>
             </div>
             
