--- a/About.html
+++ b/About.html
@@ -82,7 +82,7 @@
                     <div>นาย ปฐมพร เรืองสวัสดิ์</div>
                     <div>6652101122</div>
                     <div>ออกแบบ</div>
-                    <div><a class="nav-link" href="https://github.com/Pathomporn6652101122">Github</a></div>
+                    <div><a class="nav-link" href="https://pathomporn6652101122.github.io/Pathomporn-Rueangsawat/">Github</a></div>
                 </div>
             </div>
             <!-- Row 3 -->
