--- a/About.html
+++ b/About.html
@@ -63,7 +63,7 @@
                     <div>นายนวดล ศรีสำเริง</div>
                     <div>6652100886</div>
                     <div>ออกแบบ</div>
-                    <div><a class="nav-link" href="https://github.com/StAim01">Github</a></div>
+                    <div><a class="nav-link" href="https://staim01.github.io/My-Resume/?fbclid=IwZXh0bgNhZW0CMTAAAR08ahvB077WhuyU4JgA-cq666UcpnlVvoG9mp7-ZqA9dgm1K8pvL_uGbrg_aem_JIAUwxUtZ1hsXydjOTTFOw">Github</a></div>
                 </div>
             </div>
             <!-- Row 2 -->
