--- a/About.html
+++ b/About.html
@@ -87,7 +87,7 @@
             </div>
             <!-- Row 3 -->
             <div class="col-6 col-md-4 team-member">
-                <img src="https://github.com/hamsmart1/ColoringBookGroupProjeck/blob/72c4ab8481e85554534556db16e903b549778fe1/profile.jpg" alt="Employee 5" class="team-photo">
+                <img src="https://i.imgur.com/eS4nY0v.jpg" alt="Employee 5" class="team-photo">
                 <div class="team-name">
                     <div>นายณัฐกฤษณ์ อ่วมเกษม</div>
                     <div>6652100070</div>
