--- a/About.html
+++ b/About.html
@@ -87,7 +87,7 @@
             </div>
             <!-- Row 3 -->
             <div class="col-6 col-md-4 team-member">
-                <img src="https://imgur.com/gallery/eS4nY0v" alt="Employee 5" class="team-photo">
+                <img src="https://avatars.githubusercontent.com/u/179000057?v=4" alt="Employee 5" class="team-photo">
                 <div class="team-name">
                     <div>นายณัฐกฤษณ์ อ่วมเกษม</div>
                     <div>6652100070</div>
